Fix shop item ordering for deterministic pagination